5 - Notebooks e Data/1 - Análises numéricas/Arquivos David/Atualizados/logDicas-master/data/2019-1/226/users/4154/executions/1585_825.log
== TEST (2019-03-26 11:09:23) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#from math import pi
r = float(input('valor do raio: '))
area = pi *r**2
vol = 4/3pi*r**3

print(round(area,3))
print(round(vol,3))

-- ERROR:
File "XXXX", line 7
    vol = 4/3pi*r**3
              ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:09:37) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#from math import pi
r = float(input('valor do raio: '))
area = pi *r**2
vol = 4/3*pi*r**3

print(round(area,3))
print(round(vol,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = pi *r**2
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:09:51) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#from math import pi
r = float(input('valor do raio: '))
area = pi*r**2
vol = 4/3*pi*r**3

print(round(area,3))
print(round(vol,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = pi*r**2
NameError: name 'pi' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:10:00) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
#from math import pi
r = float(input('valor do raio: '))
area = math.pi*r**2
vol = 4/3*pi*r**3

print(round(area,3))
print(round(vol,3))

-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 6, in <module>
    area = math.pi*r**2
NameError: name 'math' is not defined
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-26 11:10:33) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import pi
r = float(input('valor do raio: '))
area = pi*r**2
vol = 4/3*pi*r**3

print(round(area,3))
print(round(vol,3))

-- OUTPUT:
63.617
381.704
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-26 11:10:42) 
-- CODE:
# Teste seu codigo aos poucos.
# Nao teste tudo no final, pois fica mais dificil de identificar erros.
# Nao se intimide com as mensagens de erro. Elas ajudam a corrigir seu codigo.
from math import pi
r = float(input('valor do raio: '))
area = pi*r**2
vol = 4/3*pi*r**3

print(round(area,3))
print(round(vol,3))

-- EXECUTION TIME:
0.2025
-- TEST CASE 1:
---- input:
4.5

---- correct output:
63.617
381.704
---- user output:
63.617
381.704
-- TEST CASE 2:
---- input:
12.34
---- correct output:
478.388
7871.076
---- user output:
478.388
7871.076
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
